--- a/blogrenderer/templates/top.gohtml
+++ b/blogrenderer/templates/top.gohtml
@@ -1,4 +1,4 @@
-
+{{define "top"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,23 +18,4 @@
     </div>
 </nav>
 <main>
-
-<h1>hello world</h1>
-
-<p>This is a description</p>
-
-Tags: <ul><li>go</li><li>tdd</li></ul>
-
-<h2 id="this-is-a-post">This is a post</h2>
-
-
-
-</main>
-<footer>
-    <ul>
-        <li><a href="https://twitter.com/Bolarin50907068/">Twitter</a></li>
-        <li><a href="https://github.com/rinwaowuogba">GitHub</a></li>
-    </ul>
-</footer>
-</body>
-</html>
+{{end}}
